--- a/statedepwebsite/src/top3HeadBars/TopDarkNavyBars.css
+++ b/statedepwebsite/src/top3HeadBars/TopDarkNavyBars.css
@@ -12,12 +12,17 @@
     background-color:rgb(12, 33, 131);
     height:50px;
     width:100%;
-    display:flex;
-    align-items:center;
     
 }
 .bottomNavy{
     background-color: rgb(29, 87, 167);
         height: 80px;
         width: 100%;
+}
+.leftProps{
+    display: flex;
+    align-items: center;
+    text-align:center;
+    background-color:purple;
+    max-width:max-content;
 }
